--- a/PIS/nbproject/project.properties
+++ b/PIS/nbproject/project.properties
@@ -42,6 +42,7 @@ file.reference.jettison-1.2.jar=C:\\Users\\Usuario iTC\\Documents\\Tareas\\3 CIC
 file.reference.joda-time-1.6.jar=C:\\Users\\Usuario iTC\\Documents\\Tareas\\3 CICLO\\Estructura de Datos\\Curso Java\\Practica Java Curso\\PracticaGrupo2\\libs\\xstream-distribution-1.4.20-bin\\xstream-1.4.20\\lib\\xstream\\joda-time-1.6.jar
 file.reference.kxml2-min-2.3.0.jar=C:\\Users\\Usuario iTC\\Documents\\Tareas\\3 CICLO\\Estructura de Datos\\Curso Java\\Practica Java Curso\\PracticaGrupo2\\libs\\xstream-distribution-1.4.20-bin\\xstream-1.4.20\\lib\\xstream\\kxml2-min-2.3.0.jar
 file.reference.mxparser-1.2.2.jar=C:\\Users\\Usuario iTC\\Documents\\Tareas\\3 CICLO\\Estructura de Datos\\Curso Java\\Practica Java Curso\\PracticaGrupo2\\libs\\xstream-distribution-1.4.20-bin\\xstream-1.4.20\\lib\\xstream\\mxparser-1.2.2.jar
+file.reference.RSScaleLabel.jar=C:\\Users\\Usuario iTC\\Downloads\\RSScaleLabel.jar
 file.reference.stax-1.2.0.jar=C:\\Users\\Usuario iTC\\Documents\\Tareas\\3 CICLO\\Estructura de Datos\\Curso Java\\Practica Java Curso\\PracticaGrupo2\\libs\\xstream-distribution-1.4.20-bin\\xstream-1.4.20\\lib\\xstream\\stax-1.2.0.jar
 file.reference.stax-api-1.0.1.jar=C:\\Users\\Usuario iTC\\Documents\\Tareas\\3 CICLO\\Estructura de Datos\\Curso Java\\Practica Java Curso\\PracticaGrupo2\\libs\\xstream-distribution-1.4.20-bin\\xstream-1.4.20\\lib\\xstream\\stax-api-1.0.1.jar
 file.reference.stax2-api-4.2.jar=C:\\Users\\Usuario iTC\\Documents\\Tareas\\3 CICLO\\Estructura de Datos\\Curso Java\\Practica Java Curso\\PracticaGrupo2\\libs\\xstream-distribution-1.4.20-bin\\xstream-1.4.20\\lib\\xstream\\stax2-api-4.2.jar
@@ -75,7 +76,9 @@ javac.classpath=\
     ${file.reference.woodstox-core-5.4.0.jar}:\
     ${file.reference.xmlpull-1.1.3.1.jar}:\
     ${file.reference.xom-1.1.jar}:\
-    ${file.reference.xpp3_min-1.1.4c.jar}
+    ${file.reference.xpp3_min-1.1.4c.jar}:\
+    ${file.reference.RSScaleLabel.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
